refactor: Resolve Yatzy3