@@ -2,15 +2,15 @@ package org.codingdojo.yatzy3;
 
 import org.codingdojo.YatzyCalculator;
 import org.codingdojo.YatzyCategory;
+import org.codingdojo.yatzy3.scorer.CategoryScorer;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class Yatzy3 implements YatzyCalculator {
     @Override
     public List<String> validCategories() {
-        return Arrays.stream(YatzyCategory.values()).map(Enum::toString).collect(Collectors.toList());
+        return Arrays.stream(YatzyCategory.values()).map(Enum::toString).toList();
     }
 
     @Override
